feat: initial user tokens support
