# swagger/swagger.json
@@ -47,6 +47,38 @@
                 }
             }
         },
+        "/api/add-access-token": {
+            "post": {
+                "tags": [
+                    "Access Token API"
+                ],
+                "description": "add access token",
+                "operationId": "ApiController.AddAccessToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "owner",
+                        "description": "The owner of token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.UserAccessToken"
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized operation"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/add-adapter": {
             "post": {
                 "tags": [
@@ -868,6 +900,46 @@
                     },
                     "401": {
                         "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/delete-access-token": {
+            "post": {
+                "tags": [
+                    "Access Token API"
+                ],
+                "description": "delete access token",
+                "operationId": "ApiController.DeleteAccessToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "owner",
+                        "description": "The owner of token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "string",
+                        "name": "user_access_token",
+                        "description": "The user access token",
+                        "schema": {
+                            "$ref": "#/definitions/true"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    },
+                    "403": {
+                        "description": "Unauthorized operation"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -3540,6 +3612,49 @@
                 }
             }
         },
+        "/api/get-user-by-access-token": {
+            "post": {
+                "tags": [
+                    "Access Token API"
+                ],
+                "description": "get user by access token",
+                "operationId": "ApiController.GetUserByAccessToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "owner",
+                        "description": "The owner of token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "string",
+                        "name": "user_access_token",
+                        "description": "The user access token",
+                        "schema": {
+                            "$ref": "#/definitions/true"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.User"
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized operation"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/get-user-count": {
             "get": {
                 "tags": [
@@ -4215,6 +4330,49 @@
                         "schema": {
                             "$ref": "#/definitions/controllers.Response"
                         }
+                    }
+                }
+            }
+        },
+        "/api/recreate-access-token": {
+            "post": {
+                "tags": [
+                    "Access Token API"
+                ],
+                "description": "recreate access token",
+                "operationId": "ApiController.RecreateAccessToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "owner",
+                        "description": "The owner of token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "string",
+                        "name": "user_access_token",
+                        "description": "The user access token",
+                        "schema": {
+                            "$ref": "#/definitions/true"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.UserAccessToken"
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized operation"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -5716,11 +5874,11 @@
         }
     },
     "definitions": {
-        "194510.\u003cnil\u003e.string": {
+        "198563.\u003cnil\u003e.string": {
             "title": "string",
             "type": "object"
         },
-        "317539.\u003cnil\u003e.string": {
+        "321740.\u003cnil\u003e.string": {
             "title": "string",
             "type": "object"
         },
@@ -6425,7 +6583,7 @@
                 "enableAttributeMapping": {
                     "type": "boolean"
                 },
-                "enableMutualTls": {
+                "enableCryptographicAuth": {
                     "type": "boolean"
                 },
                 "enableRoleMapping": {
@@ -6549,7 +6707,7 @@
                 "customPolicyMappingRules": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/194510.\u003cnil\u003e.string"
+                        "$ref": "#/definitions/198563.\u003cnil\u003e.string"
                     }
                 },
                 "description": {
@@ -7187,6 +7345,9 @@
                 "endpoint": {
                     "type": "string"
                 },
+                "endpointType": {
+                    "type": "string"
+                },
                 "host": {
                     "type": "string"
                 },
@@ -7273,7 +7434,7 @@
                     "type": "string"
                 },
                 "userMapping": {
-                    "$ref": "#/definitions/317539.\u003cnil\u003e.string"
+                    "$ref": "#/definitions/321740.\u003cnil\u003e.string"
                 },
                 "validateIdPSignature": {
                     "type": "boolean"
@@ -8311,6 +8472,18 @@
                 }
             }
         },
+        "object.UserAccessToken": {
+            "title": "UserAccessToken",
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                }
+            }
+        },
         "object.UserIdProvider": {
             "title": "UserIdProvider",
             "type": "object",
@@ -8451,6 +8624,10 @@
         },
         "protocol.CredentialCreationResponse": {
             "title": "CredentialCreationResponse",
+            "type": "object"
+        },
+        "true": {
+            "title": "true",
             "type": "object"
         },
         "util.SystemInfo": {
